# vbwd-plugin-shop

./: README.md  __init__.py  admin-config.json  config.json  populate_db.py  pyproject.toml
.github/workflows/: tests.yml
migrations/versions/: 20260612_shop_product_display_mode.py  20260612_shop_product_tax.py  20260613_shop_price_float.py  20260617_shop_link_product_id_index.py  20260701_shop_product_vendor_id.py  20260705_shop_drop_is_digital.py  20260705_shop_product_type.py  20260705_shop_product_type_cols.py
shop/: checkout_validation_registry.py  constants.py  demo_seed.py  marketplace_listings.py  routes.py  search_provider.py  shipping_registry.py
shop/handlers/: line_item_handler.py
shop/models/: __init__.py  abandoned_cart.py  order.py  order_item.py  product.py  product_category.py  product_image.py  product_type.py  product_variant.py  review.py  stock_block.py  warehouse.py  warehouse_stock.py  wishlist.py
shop/repositories/: order_item_repository.py  order_repository.py  product_category_repository.py  product_repository.py  product_type_repository.py  product_variant_repository.py  stock_block_repository.py  warehouse_repository.py  warehouse_stock_repository.py
shop/services/: plugin_config.py  product_copy_service.py  product_pricing_service.py  product_type_registry.py  product_type_service.py  product_variant_service.py  stock_service.py
tests/: conftest.py
tests/integration/: test_admin_product_bulk_taxonomy_routes.py  test_admin_product_copy_routes.py  test_admin_product_display_mode_routes.py  test_admin_product_tax_routes.py  (+27 more)
(+40 files in other folders)
