[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vbwd-plugin-shop"
version = "26.7.0"
description = "VBWD backend plugin: shop"
requires-python = ">=3.11"
license = { text = "BSL-1.1" }
dependencies = []

# Runtime lives inside the vbwd-backend host, which provides `vbwd.*` (core) and
# any sibling plugins declared in PluginMetadata.dependencies. Those are NOT pinned
# here so the wheel stays host-agnostic; install the host separately.

[tool.setuptools]
# The repo root IS the plugins/shop/ directory; remap it so the wheel exposes
# the `plugins.shop` package that runtime imports (e.g. `from plugins.shop...`).
package-dir = { "plugins.shop" = "." }
packages = [
    "plugins.shop",
    "plugins.shop.shop",
    "plugins.shop.shop.handlers",
    "plugins.shop.shop.models",
    "plugins.shop.shop.repositories",
    "plugins.shop.shop.services",
    "plugins.shop.shop.services.data_exchange",
]

[tool.setuptools.package-data]
# Ship everything a pip-installed plugin needs to be self-complete: config JSON,
# Alembic migrations (the shared backend env.py resolves version_locations from
# the installed package path), seed scripts, and bin/ helpers.
"plugins.shop" = [
    "*.json",
    "migrations/*.py",
    "migrations/*.mako",
    "migrations/*.ini",
    "migrations/**/*.py",
    "migrations/**/*.mako",
    "populate_db.py",
    "populate_*.py",
    "demo_seed.py",
    "bin/*",
    "bin/**/*",
]
